src/test/ui/coherence-impls-copy.stderr
error[E0119]: conflicting implementations of trait `std::marker::Copy` for type `i32`:
  --> $DIR/coherence-impls-copy.rs:15:1
   |
LL | impl Copy for i32 {}
   | ^^^^^^^^^^^^^^^^^
   |
   = note: conflicting implementation in crate `core`:
           - impl std::marker::Copy for i32;

error[E0119]: conflicting implementations of trait `std::marker::Copy` for type `&NotSync`:
  --> $DIR/coherence-impls-copy.rs:41:1
   |
LL | impl Copy for &'static NotSync {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: conflicting implementation in crate `core`:
           - impl<'a, T> std::marker::Copy for &'a T
             where T: ?Sized;

error[E0119]: conflicting implementations of trait `std::marker::Copy` for type `&[NotSync]`:
  --> $DIR/coherence-impls-copy.rs:48:1
   |
LL | impl Copy for &'static [NotSync] {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: conflicting implementation in crate `core`:
           - impl<'a, T> std::marker::Copy for &'a T
             where T: ?Sized;

error[E0206]: the trait `Copy` may not be implemented for this type
  --> $DIR/coherence-impls-copy.rs:33:15
   |
LL | impl Copy for &'static mut MyType {}
   |               ^^^^^^^^^^^^^^^^^^^ type is not a structure or enumeration

error[E0206]: the trait `Copy` may not be implemented for this type
  --> $DIR/coherence-impls-copy.rs:37:15
   |
LL | impl Copy for (MyType, MyType) {}
   |               ^^^^^^^^^^^^^^^^ type is not a structure or enumeration

error[E0206]: the trait `Copy` may not be implemented for this type
  --> $DIR/coherence-impls-copy.rs:44:15
   |
LL | impl Copy for [MyType] {}
   |               ^^^^^^^^ type is not a structure or enumeration

error[E0117]: only traits defined in the current crate can be implemented for arbitrary types
  --> $DIR/coherence-impls-copy.rs:15:1
   |
LL | impl Copy for i32 {}
   | ^^^^^^^^^^^^^^^^^ impl doesn't use types inside crate
   |
   = note: the impl does not reference any types defined in this crate
   = note: define and implement a trait or new type instead

error[E0117]: only traits defined in the current crate can be implemented for arbitrary types
  --> $DIR/coherence-impls-copy.rs:37:1
   |
LL | impl Copy for (MyType, MyType) {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ impl doesn't use types inside crate
   |
   = note: the impl does not reference any types defined in this crate
   = note: define and implement a trait or new type instead

error[E0117]: only traits defined in the current crate can be implemented for arbitrary types
  --> $DIR/coherence-impls-copy.rs:44:1
   |
LL | impl Copy for [MyType] {}
   | ^^^^^^^^^^^^^^^^^^^^^^ impl doesn't use types inside crate
   |
   = note: the impl does not reference any types defined in this crate
   = note: define and implement a trait or new type instead

error[E0117]: only traits defined in the current crate can be implemented for arbitrary types
  --> $DIR/coherence-impls-copy.rs:48:1
   |
LL | impl Copy for &'static [NotSync] {}
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ impl doesn't use types inside crate
   |
   = note: the impl does not reference any types defined in this crate
   = note: define and implement a trait or new type instead

error: aborting due to 10 previous errors

Some errors occurred: E0117, E0119, E0206.
For more information about an error, try `rustc --explain E0117`.
